# try-python-movie-edit

./: .env.sample  .gitignore  README.md  pyproject.toml  try01.ipynb  try02.ipynb  try03.ipynb  untitled.code-workspace
app/: README.md  pyproject.toml
try01/: README.md  try03.ipynb
try04/: README.md  pyproject.toml
try05/: README.md  pyproject.toml  try05.ipynb
try06/: README.md  pyproject.toml  try06.ipynb
try07/: README.md  pyproject.toml  try07.ipynb
try08/: README.md  com_func.py  main.py  pyproject.toml
try09/: README.md  com_func.py  main.py  pyproject.toml
try10/: README.md  main.py  pyproject.toml
try11/: README.md  myapp.py  pyproject.toml
